# arcgis-utils-public

./: .gitignore  README.md  environment-lock.yml  environment.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: cd-python.yml  ci-python.yml
notebooks/: .env.template  demo_agol.ipynb  demo_upload_module_to_agol.ipynb  setup_geospatial_gpu_uv.ipynb
src/arcgis_utils_public/: __init__.py  agol_user_admin.py  hello.py
src/arcgis_utils_public/arcgis_utils/: agol_user_admin.py
src/gis_utils_public/: __init__.py  main.py
src/gis_utils_public/arcgis_utils/: __init__.py
src/mdir_arcpy_utils_public/: __init__.py  agol_add_users_to_group.py  hello.py
